--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -26,4 +26,4 @@ RUN mkdir -p data
 EXPOSE 8000
 
 # Default command to run the application
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["sh", "-c", "gunicorn app.main:app --workers 4 --worker-class uvicorn.workers.UvicornWorker --bind 0.0.0.0:${PORT:-8000}"]
