--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -21,6 +21,6 @@
     }
   ],
   "env": {
-    "VITE_API_BASE_URL": "@vite_api_base_url"
+    "VITE_API_BASE_URL": "https://l7informatics-production.up.railway.app"
   }
 }
